# rust-xdr

xdr-codec/: Cargo.toml
xdr-codec/src/: lib.rs
xdrgen/: Cargo.toml
xdrgen/example/: build.rs
xdrgen/example/src/: simple.rs  simple.x
xdrgen/src/: lib.rs  xdrgen.rs
xdrgen/src/spec/: mod.rs  test.rs
xdrgen/tests/: lib.rs
